# grafika-macos-template

./: .gitignore  CMakeLists.txt  readme.md
src/: Skeleton.cpp  framework.cpp  framework.h
src/Glad/include/glad/: glad.h
